enable_testing()

file(GLOB TEST_SOURCES *.cpp)
foreach(TEST_SOURCE ${TEST_SOURCES})
  get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
  add_executable(${TEST_NAME})
  target_sources(${TEST_NAME} PRIVATE ${TEST_SOURCE})
  target_link_libraries(${TEST_NAME} PRIVATE lagrange)
  add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endforeach()